src/objects/Storemission__c.object
<CustomObject>
    <fields>
        <fullName>AMP_power__c</fullName>
        <label>AMP power</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bar1__c</fullName>
        <label>最终初级气压（Bar）</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bar__c</fullName>
        <label>初始初级气压（Bar）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field10__c</fullName>
        <formula>Field1__r.Name</formula>
        <label>使用客户</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <label>检测结果</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <label>工作类型</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>培训</fullName>
                </value>
                <value>
                    <fullName>检测/维护/维修</fullName>
                </value>
                <value>
                    <fullName>拆件/备用</fullName>
                </value>
                <value>
                    <fullName>恢复设备</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HE_nm1__c</fullName>
        <label>最终能量测试HE（nm）</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HE_nm__c</fullName>
        <label>初始能量测试HE（nm）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HF_mj1__c</fullName>
        <label>最终能量测试HF（mj）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HF_mj__c</fullName>
        <label>初始能量测试HF（mj）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HV_V1__c</fullName>
        <label>最终能量测试HV（V）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HV_V__c</fullName>
        <label>初始能量测试HV（V）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IR_power__c</fullName>
        <label>IR power</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LE_nm1__c</fullName>
        <label>最终能量测试LE（nm）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LE_nm__c</fullName>
        <label>初始能量测试LE（nm）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LF_mj1__c</fullName>
        <label>最终能量测试LF（mj）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LF_mj__c</fullName>
        <label>初始能量测试LF（mj）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1__c</fullName>
        <label>最终激光腔脉冲数（M）</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M__c</fullName>
        <label>初始激光腔脉冲数（M）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1000V_Mlase_1400v_EXSO_10s_mj__c</fullName>
        <label>初始最大能量1000V(Mlase)1400v(EXSO)10s下（mj）</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1000v_Mlase_1400v_EXSO_10s_mj1__c</fullName>
        <label>最终最大能量1000v(Mlase）1400v（EXSO)10s下（mj）</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X10__c</fullName>
        <label>备件序列号5</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1__c</fullName>
        <label>备件名称1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2__c</fullName>
        <label>备件名称2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chiller_water_flow__c</fullName>
        <label>chiller water flow</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>housing_temperature__c</fullName>
        <label>housing temperature</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>humidity_DP__c</fullName>
        <label>humidity DP</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mBar1__c</fullName>
        <label>最终次级气压（mBar）</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mBar__c</fullName>
        <label>初始次级气压（mBar）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>missiontime__c</fullName>
        <label>任务时间</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>missiontype__c</fullName>
        <label>任务类型</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>整理机器</fullName>
                </value>
                <value>
                    <fullName>维修机器</fullName>
                </value>
                <value>
                    <fullName>检测设备</fullName>
                </value>
                <value>
                    <fullName>检测备件</fullName>
                </value>
                <value>
                    <fullName>拆装备件</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>remark__c</fullName>
        <label>备注</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>temperature_DP__c</fullName>
        <label>temperature DP</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>training__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>培训管理</label>
        <referenceTo>trainmanagement__c</referenceTo>
        <relationshipLabel>库房任务</relationshipLabel>
        <relationshipName>training</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>汇报人</label>
        <referenceTo>User</referenceTo>
        <relationshipName>userren</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>库房任务</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>missiontime__c</columns>
        <columns>missiontype__c</columns>
        <columns>remark__c</columns>
        <columns>user__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <listViews>
        <fullName>InstallSpare</fullName>
        <columns>NAME</columns>
        <columns>user__c</columns>
        <columns>missiontype__c</columns>
        <columns>missiontime__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>remark__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>missiontype__c</field>
            <operation>equals</operation>
            <value>拆装备件</value>
        </filters>
        <label>拆装备件</label>
    </listViews>
    <listViews>
        <fullName>MachineInspect</fullName>
        <columns>NAME</columns>
        <columns>user__c</columns>
        <columns>missiontype__c</columns>
        <columns>missiontime__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>remark__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>missiontype__c</field>
            <operation>equals</operation>
            <value>检测设备</value>
        </filters>
        <label>检测设备</label>
    </listViews>
    <listViews>
        <fullName>MachineMaintain</fullName>
        <columns>NAME</columns>
        <columns>user__c</columns>
        <columns>missiontype__c</columns>
        <columns>missiontime__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>remark__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>missiontype__c</field>
            <operation>equals</operation>
            <value>维修机器</value>
        </filters>
        <label>维修机器</label>
    </listViews>
    <listViews>
        <fullName>OrganizeMachine</fullName>
        <columns>NAME</columns>
        <columns>user__c</columns>
        <columns>missiontype__c</columns>
        <columns>missiontime__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>remark__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>missiontype__c</field>
            <operation>equals</operation>
            <value>整理机器</value>
        </filters>
        <label>整理机器</label>
    </listViews>
    <listViews>
        <fullName>SpareInspect</fullName>
        <columns>NAME</columns>
        <columns>user__c</columns>
        <columns>missiontype__c</columns>
        <columns>missiontime__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>remark__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>missiontype__c</field>
            <operation>equals</operation>
            <value>检测备件</value>
        </filters>
        <label>检测备件</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{000000}</displayFormat>
        <label>序号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>库房任务</pluralLabel>
    <recordTypes>
        <fullName>AMARIS</fullName>
        <active>true</active>
        <label>准分子设备</label>
    </recordTypes>
    <recordTypes>
        <fullName>LensAr</fullName>
        <active>true</active>
        <label>飞白设备</label>
    </recordTypes>
    <recordTypes>
        <fullName>scoutandsoon</fullName>
        <active>true</active>
        <label>检查设备</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>